2013-08-15 (developers) migrated to git subtree, you don't need to hand-update submodules anymore
2013-07-18 add automatic reloader for development mode
2013-07-13 add bin script `nyara`
2013-07-10 add before filter
2013-07-06 add worker signal management
2013-07-05 add static file controller
           Config: remove setter helpers, add path helers
2013-07-03 add multipart request parsing
2013-07-01 add flash helper
2013-06-30 add Nyara::Test::Response for test to parse response
2013-06-27 compatibility fixes for versions of GCC and Ruby
2013-06-26 patch TCPSocket so client libraries in Ruby won't stuck
           add sleep helper
2013-06-22 add changes and copying