@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title><%= app_name %></title>
+  <title><%= @app_name %></title>
   <link type="text/css" rel="stylesheet" href="/css/app.css">
   <script type="text/javascript" src="/js/app.js"></script>
 </head>
